save user to local storage, add logout button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           maxlength="4"
           class="login__input login__input--pin"
         />
-        <button class="login__btn">&rarr;</button>
+        <button class="login__btn">&rarr;</button>    
       </form>
     </nav>
 
@@ -113,12 +113,19 @@
         </form>
       </div>
 
+      <div class="operation operation--close">
+        <h2>Logout</h2>
+        <form class="form form--close">
+          <button class="form__btn form__btn--logout">&rarr;</button>
+        </form>
+      </div>
+
       <!-- LOGOUT TIMER -->
       <p class="logout-timer">
         You will be logged out in <span class="timer">05:00</span>
       </p>
     </main>
-
+    
     <!-- <footer>
       &copy; by Jonas Schmedtmann. Don't claim as your own :)
     </footer> -->
